--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "license": "ISC",
     "workspaces": [
         "packages/utils",
-        "packages/day-01"
+        "packages/day-01",
+        "packages/day-02"
     ],
     "devDependencies": {
         "@types/jest": "^29.5.10",
