--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "workspaces": [
         "packages/utils",
         "packages/day-01",
-        "packages/day-02"
+        "packages/day-02",
+        "packages/day-03"
     ],
     "devDependencies": {
         "@types/jest": "^29.5.10",
