--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "devDependencies": {
         "@types/jest": "^29.5.10",
         "@types/node": "^20.10.1",
+        "@types/source-map-support": "^0.5.10",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@typescript-eslint/parser": "^6.13.1",
         "eslint": "^8.54.0",
@@ -53,5 +54,8 @@
                 }
             ]
         }
+    },
+    "dependencies": {
+        "source-map-support": "^0.5.21"
     }
 }
