--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "packages/day-02",
         "packages/day-03",
         "packages/day-04",
-        "packages/day-05"
+        "packages/day-05",
+        "packages/day-06"
     ],
     "devDependencies": {
         "@types/jest": "^29.5.10",
