--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "packages/day-03",
         "packages/day-04",
         "packages/day-05",
-        "packages/day-06"
+        "packages/day-06",
+        "packages/day-07"
     ],
     "devDependencies": {
         "@types/jest": "^29.5.10",
