--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "packages/day-04",
         "packages/day-05",
         "packages/day-06",
-        "packages/day-07"
+        "packages/day-07",
+        "packages/day-08"
     ],
     "devDependencies": {
         "@types/jest": "^29.5.10",
